add audio lib soloud with different back ends on all platforms. fix android build issue.

--- a/Project/Android/app/CMakeLists.txt
+++ b/Project/Android/app/CMakeLists.txt
@@ -9,6 +9,7 @@ include_directories(
 	src/main/cpp/3rdParty/BGFX/Header
 	src/main/cpp/3rdParty/Lua/Header
 	src/main/cpp/3rdParty/Zip/Header
+	src/main/cpp/3rdParty/soloud/Header
 	src/main/cpp/3rdParty/lodepng
 	src/main/cpp/3rdParty/imgui
 	src/main/cpp/3rdParty/font
@@ -38,6 +39,12 @@ set_target_properties(
 	${CMAKE_CURRENT_SOURCE_DIR}/src/main/cpp/3rdParty/Lua/Lib/Android/${ANDROID_ABI}/libluajit.a
 )
 
+add_library( soloud-lib STATIC IMPORTED )
+set_target_properties(
+	soloud-lib PROPERTIES IMPORTED_LOCATION
+	${CMAKE_CURRENT_SOURCE_DIR}/src/main/cpp/3rdParty/soloud/Lib/Android/${ANDROID_ABI}/libsoloud.a
+)
+
 add_library( main SHARED ${src-files} )
 
-target_link_libraries( main android log EGL z GLESv1_CM GLESv2 SDL2-lib BGFX-lib BX-lib luajit-lib )
+target_link_libraries( main android log EGL z GLESv1_CM GLESv2 SDL2-lib BGFX-lib BX-lib luajit-lib soloud-lib )
