--- a/Project/Windows/Dorothy/Dorothy.vcxproj.filters
+++ b/Project/Windows/Dorothy/Dorothy.vcxproj.filters
@@ -584,9 +584,6 @@
     <ClInclude Include="..\..\..\Source\Common\WRef.h">
       <Filter>Common</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Source\Const\Define.h">
-      <Filter>Const</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\Source\Const\Header.h">
       <Filter>Const</Filter>
     </ClInclude>
@@ -971,6 +968,12 @@
     </ClInclude>
     <ClInclude Include="..\..\..\Source\Input\Keyboard.h">
       <Filter>Input</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\Const\Config.h">
+      <Filter>Const</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\Const\XmlTag.h">
+      <Filter>Const</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
