--- a/Project/Android/app/build.gradle
+++ b/Project/Android/app/build.gradle
@@ -11,7 +11,7 @@ android {
 		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 		externalNativeBuild {
 			cmake {
-				arguments "-DANDROID_STL=c++_shared","-DANDROID_ARM_NEON=TRUE"
+				arguments "-DANDROID_STL=c++_static","-DANDROID_ARM_NEON=TRUE"
 				abiFilters "armeabi-v7a","x86"
 				cppFlags "-std=c++11","-frtti","-fexceptions"
 			}
@@ -37,10 +37,10 @@ android {
 }
 
 dependencies {
-	compile fileTree(dir: 'libs', include: ['*.jar'])
-	androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+	implementation fileTree(dir: 'libs', include: ['*.jar'])
+	androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
 		exclude group: 'com.android.support', module: 'support-annotations'
 	})
-	compile 'com.android.support:appcompat-v7:22.1.0'
-	testCompile 'junit:junit:4.12'
+	implementation 'com.android.support:appcompat-v7:22.1.0'
+	testImplementation 'junit:junit:4.12'
 }
